fix z-index

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -82,6 +82,7 @@ a {
 header {
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .space {
@@ -96,6 +97,7 @@ nav {
 }
 
 .menu {
+    
     justify-content: space-between;
     align-items: center;
     width: 100%;
